// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ProductCard rendering tests ProductCard - product BUNDLE - test 1`] = `
<div>
  <div
    class="text-card-foreground flex flex-col shadow-sm p-4 gap-0 bg-white border border-slate-300 rounded-lg hover:border-blue-500 hover:shadow-md transition-all"
    data-slot="card"
    data-testid="product-card"
  >
    <div
      class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 p-0 gap-2 mb-3"
      data-slot="card-header"
    >
      <div
        class="flex items-start justify-between gap-2"
      >
        <h4
          class="font-medium text-slate-900 flex-1"
        >
          name 1
        </h4>
        <span
          class="text-xs px-2 py-0.5 rounded border bg-green-100 text-green-700 border-green-200"
        >
          BUNDLE
        </span>
      </div>
      <p
        class="text-2xl font-bold text-slate-900"
      >
        $
        59.99
      </p>
    </div>
    <div
      class="p-0 grid gap-2"
      data-slot="card-content"
    >
      <p
        class="text-xs text-slate-600 mb-2"
      >
        1
         templates included
      </p>
      <p
        class="text-sm text-slate-600 line-clamp-2 mb-3"
      >
        description 1
      </p>
      <div
        class="flex gap-2"
      >
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 flex-1 cursor-pointer"
          data-slot="button"
          data-testid="view-details-btn"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-info w-4 h-4 mr-2"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="M12 16v-4"
            />
            <path
              d="M12 8h.01"
            />
          </svg>
          Details
        </button>
        <div
          data-slot="dialog"
          data-testid="product-detials-dialog"
        >
          <div
            data-slot="dialog-portal"
            data-testid="mock-react-dialog-portal"
          >
            <div
              class="data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 fixed inset-0 z-50 bg-black/50"
              data-slot="dialog-overlay"
              data-testid="mock-react-dialog-overlay"
            />
          </div>
        </div>
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3 flex-1 cursor-pointer"
          data-slot="button"
          data-testid="add-to-cart-btn"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-shopping-cart w-4 h-4 mr-2"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="8"
              cy="21"
              r="1"
            />
            <circle
              cx="19"
              cy="21"
              r="1"
            />
            <path
              d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
            />
          </svg>
          <span>
              Add to Cart
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProductCard rendering tests ProductCard- product TEMPLATE - test 1`] = `
<div>
  <div
    class="text-card-foreground flex flex-col shadow-sm p-4 gap-0 bg-white border border-slate-300 rounded-lg hover:border-blue-500 hover:shadow-md transition-all"
    data-slot="card"
    data-testid="product-card"
  >
    <div
      class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 p-0 gap-2 mb-3"
      data-slot="card-header"
    >
      <div
        class="flex items-start justify-between gap-2"
      >
        <h4
          class="font-medium text-slate-900 flex-1"
        >
          name 1
        </h4>
        <span
          class="text-xs px-2 py-0.5 rounded border bg-blue-100 text-blue-700 border-blue-200"
        >
          TEMPLATE
        </span>
      </div>
      <p
        class="text-2xl font-bold text-slate-900"
      >
        $
        59.99
      </p>
    </div>
    <div
      class="p-0 grid gap-2"
      data-slot="card-content"
    >
      <div
        class="flex flex-wrap gap-1 mb-2"
        data-testid="categories"
      >
        <span
          class="text-xs px-2 py-0.5 bg-slate-100 text-slate-700 rounded border border-slate-200"
        >
          category 0
        </span>
        <span
          class="text-xs px-2 py-0.5 bg-slate-100 text-slate-700 rounded border border-slate-200"
        >
          category 1
        </span>
        <span
          class="text-xs px-2 py-0.5 bg-slate-100 text-slate-700 rounded border border-slate-200"
        >
          category 2
        </span>
      </div>
      <p
        class="text-sm text-slate-600 line-clamp-2 mb-3"
      >
        description 1
      </p>
      <div
        class="flex gap-2"
      >
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 flex-1 cursor-pointer"
          data-slot="button"
          data-testid="view-details-btn"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-info w-4 h-4 mr-2"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="M12 16v-4"
            />
            <path
              d="M12 8h.01"
            />
          </svg>
          Details
        </button>
        <div
          data-slot="dialog"
          data-testid="product-detials-dialog"
        >
          <div
            data-slot="dialog-portal"
            data-testid="mock-react-dialog-portal"
          >
            <div
              class="data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 fixed inset-0 z-50 bg-black/50"
              data-slot="dialog-overlay"
              data-testid="mock-react-dialog-overlay"
            />
          </div>
        </div>
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3 flex-1 cursor-pointer"
          data-slot="button"
          data-testid="add-to-cart-btn"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-shopping-cart w-4 h-4 mr-2"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="8"
              cy="21"
              r="1"
            />
            <circle
              cx="19"
              cy="21"
              r="1"
            />
            <path
              d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
            />
          </svg>
          <span>
              Add to Cart
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
